Fix crash when µTP binding fails

BUG: 244935

svn path=/branches/stable/extragear-kde4/network/libktorrent/; revision=1150971